--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./js/profile.js"></script>
-    <link rel="stylesheet" href="./css/profile.css" />
+    <link rel="stylesheet" href="css/profile.css" />
     <title>Profile</title>
 </head>
 <body>
@@ -37,8 +37,8 @@
           <div class="col-sm-12  col-md-12 ">
               <div class="profile">
                 <button class="btn btn-outline-info " id="logout">logout</button>
-                <form id="submit" action="./php/profile.php">
-                  <img src="./assets/profile.png" class="rounded mx-auto d-block" alt="..." >
+                <form id="submit" action="php/profile.php">
+                  <img src="assets/profile.png" class="rounded mx-auto d-block" alt="..." >
                   <h1 class="d-flex justify-content-around">Profile</h1>
                   <div class="form-group">
                     <label for="mobile">mobile</label>
