--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/login.css">
+  <link rel="stylesheet" href="css/login.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
   <link
@@ -28,12 +28,12 @@
     crossorigin="anonymous"
   ></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./js/login.js"></script> 
+    <script src="js/login.js"></script> 
   <title>Login</title>
 </head>
 <body>
     <div class="container mt-5">
-      <form id="submited" action="./php/login.php">
+      <form id="submited" action="php/login.php">
         <div class="form-group">
           <label for="username">username</label>
           <input type="username" class="form-control" id="username" placeholder="Enter your username" required>
