--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="./css/register.css" />
+    <link rel="stylesheet" href="css/register.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
@@ -29,12 +29,12 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./js/register.js"></script>
+    <script src="js/register.js"></script>
     <title>Signup</title>
   </head>
 <body>
 	<div class="container mt-5">
-		<form id="submit" method="POST" action="./php/register.php">
+		<form id="submit" method="POST" action="php/register.php">
 		  <div class="form-group">
 			<label for="name">Username</label>
 			<input type="text" class="form-control" id="name" placeholder="Enter your username" required>
